# Multi-Agent-Travel-Planning-System

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  llm.py
app/rag/: retriever.py
app/rag/ingest/: chunk.py  clean.py  embed.py  fetch.py  index.py  run.py
app/schemas/: itinerary.py  tool_results.py  trip.py
docs/: data_sources.md
docs/contracts/: CurrencyResult.schema.json  EventsResult.schema.json  ItineraryResponse.schema.json  Money.schema.json  RAGChunk.schema.json  ToolResultEnvelope.schema.json  TripRequest.schema.json  WeatherResult.schema.json
scripts/: export_schemas.py  test_embeddings.py  test_gemini.py
